Added basic styling and most pages needed.

--- a/support.html
+++ b/support.html
@@ -15,12 +15,18 @@
       </ul>
     </nav>
     <main>
-      <div id="mainwrapper">
-        <div class="backgroundimg">
-          <p class="heading noselect">Welcome to MicroStar</p>
-          <p class="subtitle noselect">Technology Solutions Worldwide</p>
-        </div>
-      </div>
+      <section id="tollfree">
+        <h2>Call Us</h2>
+        <p>(800)555-0168</p>
+      </section>
+      <section id="aura">
+        <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/14888251-e833-4177-bca3-981eb0fa975d">
+  </iframe>
+      </section>
     </main>
   </body>
 </html>
