--- a/support.html
+++ b/support.html
@@ -12,6 +12,7 @@
         <li><a href="./index.html"><img src="./ico.png">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
         <li><a href="./support.html">Support</a></li>
+        <li><a href="./admin/login.html">Admin Panel</a></li>
       </ul>
     </nav>
     <main>
