Applied wrapper to all pages

--- a/about.html
+++ b/about.html
@@ -15,5 +15,16 @@
         <li><a href="./admin/login.html">Admin Panel</a></li>
       </ul>
     </nav>
+    <main>
+      <div id="mainwrapper">
+        <div class="backgroundimg">
+          <p class="heading noselect">About Us</p>
+          <p class="subtitle noselect">Join Us</p>
+        </div>
+        <div class="textwrapper">
+          <p>dsafghgj</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
