--- a/support.html
+++ b/support.html
@@ -16,18 +16,27 @@
       </ul>
     </nav>
     <main>
-      <section id="tollfree">
-        <h2>Call Us</h2>
-        <p>(800)555-0168</p>
-      </section>
-      <section id="aura">
-        <iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/14888251-e833-4177-bca3-981eb0fa975d">
-  </iframe>
-      </section>
+      <div id="mainwrapper">
+        <div class="backgroundimg">
+          <p class="heading noselect">Technical Support</p>
+          <p class="subtitle noselect">Join Us</p>
+        </div>
+        <div class="textwrapper">
+          <section id="tollfree">
+            <h2>Call Us</h2>
+            <p>(800)555-0168</p>
+          </section>
+          <hr />
+          <section id="aura">
+            <iframe
+        allow="microphone;"
+        width="350"
+        height="430"
+        src="https://console.dialogflow.com/api-client/demo/embedded/14888251-e833-4177-bca3-981eb0fa975d">
+      </iframe>
+          </section>
+        </div>
+      </div>
     </main>
   </body>
 </html>
