--- a/admin/console.html
+++ b/admin/console.html
@@ -8,9 +8,24 @@
   </head>
   <body>
     <script defer src="main.js"></script>
-    <div id="loginwrapper">
+    <div id="consolewrapper">
       <h1>MicroStar Console</h1>
-      <a href="../index.html">Go Back</a>
+      <ul>
+        <li><a href="../index.html">Go Back</a></li>
+        <li>Intel</li>
+        <ol><li><a href="./logs/damonbot.html">Damonbot</a></li>
+            <li><a href="./logs/jamiebot.html">Jamiebot</a></li>
+            <li><a href="./logs/cyborg_2D.html">Cyborg 2D</a></li>
+            <li><a href="./logs/dentz.html">"Dentz"</a></li>
+            <li><a href="./logs/caeser.html">"Caeser"</a></li>
+            <li><a href="./logs/2D.html">"2D"</a></li>
+        </ol>
+      </ul>
+      <p>Select an option.</p>
+      <hr />
+      <p>Email server offline.</p>
+      <p>Voip server offline.</p>
+      <p>Database server offline.</p>
     </div>
   </body>
 </html>
