--- a/admin/loggedin.html
+++ b/admin/loggedin.html
@@ -13,6 +13,7 @@
       <div class="centered">
       <p>Unauthorized Use of this console is strictly prohibited. Those caught using this console and are not employees of MicroStar Technologies will be punished to the fullest extent of the law.</p>
     </div>
+    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     </div>
     <script>
     setTimeout("location.href = './console.html';",5000);
