--- a/support.html
+++ b/support.html
@@ -22,12 +22,16 @@
           <p class="subtitle noselect">Join Us</p>
         </div>
         <div class="textwrapper">
+          <!-- Toll-Free Number -->
           <section id="tollfree">
             <h2>Call Us</h2>
-            <p>(800)555-0168</p>
+            <h3>+1 (800) 555-0168</h3>
+            <p>We want to make things right. Call us for help at anytime, 9am-5pm PST.</p>
           </section>
-          <hr />
+          <!-- Aura -->
           <section id="aura">
+            <h2>Chat with Aura</h2>
+            <h3>MicroStar's Live Support Bot</h3>
             <iframe
         allow="microphone;"
         width="350"
@@ -35,7 +39,16 @@
         src="https://console.dialogflow.com/api-client/demo/embedded/14888251-e833-4177-bca3-981eb0fa975d">
       </iframe>
           </section>
-        </div>
+          <!-- Email -->
+          <section id="email">
+            <h2>Still Experiencing Issues?</h2>
+            <h3>Email us at anytime.</h3>
+            <hr />
+            <h3 class="emailus"><a href="mailto:admin@microstartech.us">Email Us</a></h3>
+          </section>
+          </div>
+          <hr />
+
       </div>
     </main>
   </body>
