Added Greek to the pages so that they're filled in

--- a/admin/console.html
+++ b/admin/console.html
@@ -23,7 +23,7 @@
       </ul>
       <p>Select an option.</p>
       <hr />
-      <p>Email server offline.</p>
+      <p>Email server ONLINE. (email: admin@microstartech.us)</p>
       <p>Voip server offline.</p>
       <p>Database server offline.</p>
     </div>
