Christmas commit to add whatever I got.

--- a/admin/console.html
+++ b/admin/console.html
@@ -20,12 +20,21 @@
             <li><a href="./logs/caeser.html">"Caeser"</a></li>
             <li><a href="./logs/2D.html">"2D"</a></li>
         </ol>
+        <li><a href="chat.html">Agent Chat</a></li>
       </ul>
-      <p>Select an option.</p>
+      <h2>Logged in as Agent QD4B-MPP2-ILHQ-F5DI</h2>
+      <h3>Select an option.</h3>
       <hr />
       <p>Email server ONLINE. (email: admin@microstartech.us)</p>
       <p>Voip server offline.</p>
       <p>Database server offline.</p>
+      <hr />
+      <h2>Announcements</h2>
+      <ul>
+        <li>Remember the Day is Coming. 09 - 15 - 2018.</li>
+        <ul><li>All agents are strongly urged to assimilate family and friends</li></ul>
+        <ul><li>Agent reviews will commense 09/16/2018.</li></ul>
+      </ul>
     </div>
   </body>
 </html>
