--- a/admin/login.html
+++ b/admin/login.html
@@ -12,15 +12,16 @@
       <h1>Login</h1>
       <div class="centered">
       <form action="" method="get">
+        <input type="text" id="user">
         <input type="password" id="pswd">
-        <input type="button" value="Submit" onclick="checkPass();" />
+        <input type="button" value="Submit" onclick="checkCreds();" />
       </form>
       </div>
     </div>
     <script>
     document.addEventListener('keydown', (event) => {
         if (event.key=="Enter"){
-          checkPass();
+          checkCreds();
         }
     });
     </script>
