--- a/support.html
+++ b/support.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="We're everywhere! Technology Solutions Worldwide">
     <title>MicroStar Technologies</title>
     <link href="MS.ico" rel="shortcut icon" type="ico">
     <link href="styles.css" rel="stylesheet" type="text/css">
