--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="./index.html"><img src="./ico.png" alt="MicroStar logo">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
+        <li><a href="./pricing.html">Pricing</a></li>
         <li><a href="./support.html">Support</a></li>
         <li><a href="./admin/login.html">Admin Panel</a></li>
       </ul>
