--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="./index.html"><img src="./ico.png" alt="MicroStar logo">Home</a></li>
         <li><a href="./about.html">About Us</a></li>
+        <li><a href="./pricing.html">Pricing</a></li>
         <li><a href="./support.html">Support</a></li>
         <li><a href="./admin/login.html">Admin Panel</a></li>
       </ul>
@@ -24,12 +25,37 @@
         </div>
         <div class="abtwrapper">
           <h2>Welcome to MicroStar</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a erat sed leo blandit scelerisque. Aenean viverra lectus libero, et malesuada eros molestie nec. Mauris in molestie elit, eget commodo orci. Vivamus et scelerisque arcu, ac rutrum nibh. Pellentesque efficitur tortor in lectus luctus fringilla. Pellentesque ante velit, euismod sed suscipit vitae, dignissim tempus sem. Etiam cursus, est vel consectetur venenatis, quam libero ultrices ex, eu aliquam tellus quam sit amet tellus. Nullam placerat mi mollis, laoreet arcu vitae, hendrerit odio. Aliquam et nibh iaculis, fringilla massa ut, iaculis elit. Cras placerat risus ac vulputate varius. Donec vitae risus risus. Nunc porta justo cursus leo ullamcorper placerat. Ut augue lectus, fringilla convallis dolor sit amet, iaculis lobortis mi.</p>
-
-        <p>Nulla facilisi. Duis auctor, tellus eu pharetra sagittis, metus mi consequat sapien, vehicula facilisis mauris dui eget quam. Maecenas sit amet rutrum nisi, a egestas metus. Ut porttitor turpis tellus, in faucibus odio malesuada a. Integer nisi leo, ullamcorper a interdum at, tincidunt sed ex. Praesent id magna eu mauris porta feugiat. Pellentesque faucibus ultricies consectetur. Suspendisse laoreet massa eu odio pharetra, quis elementum eros tempor. Nam malesuada mi vel nisi rutrum maximus. Etiam tincidunt arcu non massa lacinia, porttitor convallis risus pretium. Nam dictum velit in tincidunt pellentesque. Nunc ultricies commodo sem, ut venenatis felis cursus ac. Aliquam tristique sapien dui, ut imperdiet enim vestibulum et. Morbi laoreet, diam vel eleifend convallis, nibh diam fringilla massa, sit amet molestie lorem nunc eu nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ut porta tortor.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a erat sed leo blandit scelerisque. Aenean viverra lectus libero, et malesuada eros molestie nec. Mauris in molestie elit, eget commodo orci. Vivamus et scelerisque arcu, ac rutrum nibh. Pellentesque efficitur tortor in lectus luctus fringilla. Pellentesque ante velit, euismod sed suscipit vitae, dignissim tempus sem. Etiam cursus, est vel consectetur venenatis, quam libero ultrices ex, eu aliquam tellus quam sit amet tellus. Nullam placerat mi mollis, laoreet arcu vitae, hendrerit odio. Aliquam et nibh iaculis, fringilla massa ut, iaculis elit. Cras placerat risus ac vulputate varius. Donec vitae risus risus. Nunc porta justo cursus leo ullamcorper placerat. Ut augue lectus, fringilla convallis dolor sit amet, iaculis lobortis mi.</p>
-
-        <p>Nulla facilisi. Duis auctor, tellus eu pharetra sagittis, metus mi consequat sapien, vehicula facilisis mauris dui eget quam. Maecenas sit amet rutrum nisi, a egestas metus. Ut porttitor turpis tellus, in faucibus odio malesuada a. Integer nisi leo, ullamcorper a interdum at, tincidunt sed ex. Praesent id magna eu mauris porta feugiat. Pellentesque faucibus ultricies consectetur. Suspendisse laoreet massa eu odio pharetra, quis elementum eros tempor. Nam malesuada mi vel nisi rutrum maximus. Etiam tincidunt arcu non massa lacinia, porttitor convallis risus pretium. Nam dictum velit in tincidunt pellentesque. Nunc ultricies commodo sem, ut venenatis felis cursus ac. Aliquam tristique sapien dui, ut imperdiet enim vestibulum et. Morbi laoreet, diam vel eleifend convallis, nibh diam fringilla massa, sit amet molestie lorem nunc eu nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ut porta tortor.</p>
+          <h3>Pricing</h3>
+          <style type="text/css">
+          .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+          .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+          .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+          .tg .tg-7rel{font-size:20px;font-family:"Arial Black", Gadget, sans-serif !important;;border-color:inherit;text-align:center}
+          .tg .tg-auie{font-size:20px;font-family:"Arial Black", Gadget, sans-serif !important;;border-color:inherit;text-align:center;vertical-align:top}
+          .tg .tg-m43l{font-size:16px;font-family:"Trebuchet MS", Helvetica, sans-serif !important;;border-color:inherit;text-align:center}
+          .tg .tg-3lba{font-weight:bold;font-style:italic;font-size:18px;font-family:"Trebuchet MS", Helvetica, sans-serif !important;;border-color:inherit;text-align:left;vertical-align:top}
+          </style>
+          <table class="tg">
+            <tr>
+              <td class="tg-7rel">Dedicated<br>Servers</td>
+              <td class="tg-7rel">Artificial<br>Intelligence</td>
+              <td class="tg-7rel">Virtual<br>Machines</td>
+              <td class="tg-auie">Domain<br>Hosting</td>
+              <td class="tg-auie">File<br>Storage</td>
+            </tr>
+            <tr>
+              <td class="tg-m43l" colspan="5">Starting at</td>
+            </tr>
+            <tr>
+              <td class="tg-3lba">$1.95/month</td>
+              <td class="tg-3lba">$5.00/month</td>
+              <td class="tg-3lba">$7.00</td>
+              <td class="tg-3lba">$4.95/month</td>
+              <td class="tg-3lba">$0.99 per GB</td>
+            </tr>
+          </table>
+          <hr />
+          <p>Call Us For Tours!</p>
         </div>
       </div>
     </main>
