--- a/pricing.html
+++ b/pricing.html
@@ -7,6 +7,7 @@
     <link href="MS.ico" rel="shortcut icon" type="ico">
     <link href="styles.css" rel="stylesheet" type="text/css">
   </head>
+  <plaintext>
   <body>
     <nav>
       <ul>
@@ -54,4 +55,5 @@
       </div>
     </main>
   </body>
+</plaintext>
 </html>
