Added about. Ready to ship?

--- a/admin/console.html
+++ b/admin/console.html
@@ -9,6 +9,7 @@
   <body>
     <script defer src="main.js"></script>
     <div id="consolewrapper">
+      <div>
       <h1>MicroStar Console</h1>
       <ul>
         <li><a href="../index.html">Go Back</a></li>
@@ -22,6 +23,8 @@
         </ol>
         <li><a href="chat.html">Agent Chat</a></li>
       </ul>
+    </div>
+    <div>
       <h2>Logged in as Agent QD4B-MPP2-ILHQ-F5DI</h2>
       <h3>Select an option.</h3>
       <hr />
@@ -35,6 +38,7 @@
         <ul><li>All agents are strongly urged to assimilate family and friends</li></ul>
         <ul><li>Agent reviews will commense 09/16/2018.</li></ul>
       </ul>
+    </div>
     </div>
   </body>
 </html>
