--- a/admin/chat.html
+++ b/admin/chat.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script defer src="main.js"></script>
-    <div id="consolewrapper">
+    <div id="intelwrapper">
       <h1>MicroStar Console</h1>
         <a href="console.html">Go Back</a>
         <iframe src='https://minnit.chat/MicroStarTech?embed&web' width='800' height='500' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/MicroStarTech' target='_blank'>View in Window</a>
