--- a/admin/loggedin.html
+++ b/admin/loggedin.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <script defer src="main.js"></script>
+    <script>
+    //location.href= "./login.html";
+    </script>
     <div id="loginwrapper">
       <h1>Logged In. Redirecting.</h1>
       <div class="centered">
