Redirect page no longer spills paragraph out

--- a/admin/console.html
+++ b/admin/console.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Admin Panel Login</title>
+    <title>MicroStar Console</title>
     <link href="../MS.ico" rel="shortcut icon" type="ico">
     <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -48,6 +48,7 @@
         <li>Remember the Day is Coming. 09 - 15 - 2018.</li>
         <ul><li>All agents are strongly urged to assimilate family and friends</li></ul>
         <ul><li>Agent reviews will commense 09/16/2018.</li></ul>
+        <li>Most Wanted intel has been posted. Prize for finding suspects alive is $2,000,000.</li>
       </ul>
     </div>
     </div>
