--- a/admin/login.html
+++ b/admin/login.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Admin Panel Login</title>
+    <title>Employee Panel Login</title>
     <link href="../MS.ico" rel="shortcut icon" type="ico">
     <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -12,7 +12,10 @@
       <h1>Login</h1>
       <div class="centered">
       <form action="" method="get">
+        Both fields are CaSe SeNsItIvE.<br />
+        Username
         <input type="text" id="user">
+        Password
         <input type="password" id="pswd">
         <input type="button" value="Submit" onclick="checkCreds();" />
       </form>
