--- a/admin/loggedin.html
+++ b/admin/loggedin.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Admin Panel Login</title>
+    <title>Logging In...</title>
     <link href="../MS.ico" rel="shortcut icon" type="ico">
     <link href="./styles.css" rel="stylesheet" type="text/css">
   </head>
