--- a/support.html
+++ b/support.html
@@ -14,7 +14,7 @@
         <li><a href="./about.html">About Us</a></li>
         <li><a href="./pricing.html">Pricing</a></li>
         <li><a href="./support.html">Support</a></li>
-        <li><a href="./admin/login.html">Admin Panel</a></li>
+        <li><a href="./admin/login.html">Employee Portal</a></li>
       </ul>
     </nav>
     <main>
