--- a/admin/console.html
+++ b/admin/console.html
@@ -8,10 +8,29 @@
   </head>
   <body>
     <script>
-    if (window.parent != window.top) {
-      // We're deeper than one down
-      window.location("./login.html");
-    }
+    var IDLE_TIMEOUT = 300; //5 minutes
+     var _idleSecondsCounter = 0;
+     document.onclick = function() {
+     _idleSecondsCounter = 0;
+     };
+     document.onmousemove = function() {
+     _idleSecondsCounter = 0;
+     };
+     document.onkeypress = function() {
+     _idleSecondsCounter = 0;
+     };
+     window.setInterval(CheckIdleTime, 1000);
+
+     function CheckIdleTime() {
+     _idleSecondsCounter++;
+     var oPanel = document.getElementById("SecondsUntilExpire");
+     if (oPanel)
+     oPanel.innerHTML = (IDLE_TIMEOUT - _idleSecondsCounter) + "";
+     if (_idleSecondsCounter >= IDLE_TIMEOUT) {
+     //alert("Time expired!");
+     document.location.href = "https://microstartech.us/admin/login.html";
+     }
+     }
     </script>
     <script defer src="main.js"></script>
     <script>
