Added database link

--- a/admin/console.html
+++ b/admin/console.html
@@ -55,12 +55,13 @@
       </ul>
     </div>
     <div>
+
       <h2>Logged in as Agent QD4B-MPP2-ILHQ-F5DI</h2>
       <h3>Select an option.</h3>
       <hr />
-      <p>Email server ONLINE. (email: admin@microstartech.us)</p>
+      <p><a href="mailto:admin@microstartech.us">Email server ONLINE. (email: admin@microstartech.us)</a></p>
       <p>Voip server offline.</p>
-      <p>Database server offline.</p>
+      <p><a href="https://www.obvibase.com/#token/QjnbBtXdHS2sFARW/r/XyfeTD5wxA1RkF5V" target= "_blank">Database server offline.</a></p>
       <hr />
       <h2>Announcements</h2>
       <ul>
