--- a/admin/console.html
+++ b/admin/console.html
@@ -44,10 +44,11 @@
       <ul>
         <li><a href="../index.html">Go Back</a></li>
         <li>Intel</li>
-        <ol><li><a href="./logs/damonbot.html">Damonbot</a></li>
-            <li><a href="./logs/jamiebot.html">Jamiebot</a></li>
-            <li><a href="./logs/cyborg_2D.html">Cyborg 2D</a></li>
+        <ol>
             <li><a href="./logs/dentz.html">"Dentz"</a></li>
+            <li><a href="./logs/cyborg_2D.html">Cyborg 2D</a></li>
+            <li><a href="./logs/damonbot.html">Damonbot</a></li>
+            <li><a href="./logs/jamiebot.html">Jamiebot</a></li>
             <li><a href="./logs/caeser.html">"Caeser"</a></li>
             <li><a href="./logs/2D.html">"2D"</a></li>
         </ol>
