Fixed broken link

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         <p>This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end. This is the end.</p>
 
         <p>Nulla facilisi. Duis auctor, tellus eu pharetra sagittis, metus mi consequat sapien, vehicula facilisis mauris dui eget quam. Maecenas sit amet rutrum nisi, a egestas metus. Ut porttitor turpis tellus, in faucibus odio malesuada a. Integer nisi leo, ullamcorper a interdum at, tincidunt sed ex. Praesent id magna eu mauris porta feugiat. Pellentesque faucibus ultricies consectetur. Suspendisse laoreet massa eu odio pharetra, quis elementum eros tempor. Nam malesuada mi vel nisi rutrum maximus. Etiam tincidunt arcu non massa lacinia, porttitor convallis risus pretium. Nam dictum velit in tincidunt pellentesque. Nunc ultricies commodo sem, ut venenatis felis cursus ac. Aliquam tristique sapien dui, ut imperdiet enim vestibulum et. Morbi laoreet, diam vel eleifend convallis, nibh diam fringilla massa, sit amet molestie lorem nunc eu nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ut porta tortor.</p>
-        <img src="./images/stocks.png" height="375px">
+        <img src="./images/Stocks.png" height="375px">
         </div>
       </div>
     </main>
